# alocine_scraper_azure

./: .gitignore  README.md  create_account_storage.sh  create_container.sh  create_db_flexible_server.sh  create_factory.sh  create_resource_group.sh  create_server_flexible.sh  pyproject.toml
alocine_scraper/: output.csv  scrapy.cfg
alocine_scraper/alocine_scraper/: items.py  middlewares.py  models.py  pipelines.py  settings.py  utils.py
alocine_scraper/alocine_scraper/spiders/: allocine_spider.py
