[tool.poetry]
name = "scrapyalocine"
version = "0.1.0"
description = ""
authors = ["sol <sol294491@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
azure-storage-blob = "^12.20.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
